--- a/src/kunde/details-kunde/details-kunde.component.html
+++ b/src/kunde/details-kunde/details-kunde.component.html
@@ -25,13 +25,13 @@
             <a [routerLink]="'/'">Startseite</a>
         </span>
         <span class="breadcrumb-item">
-            <a [routerLink]="'/sucheBuecher'">Suche B&uuml;cher</a>
+            <a [routerLink]="'/sucheKunden'">Suche Kunden</a>
         </span>
         <span class="breadcrumb-item active">Details</span>
     </div>
 
-    <section class="mt-2" *ngIf="buch !== null; else fehlermeldung">
-        <h4>Buch {{buch._id}}:</h4>
+    <section class="mt-2" *ngIf="kunde !== null; else fehlermeldung">
+        <h4>Kunde {{kunde._id}}:</h4>
 
         <!-- http://v4-alpha.getbootstrap.com/components/navs/#tabs -->
         <ul class="nav nav-tabs mt-2">
@@ -40,9 +40,9 @@
                     Stammdaten
                 </a>
             </li>
-            <li class="nav-item" *ngIf="buch.hasSchlagwoerter()">
-                <a class="nav-link" href="#schlagwoerter" data-toggle="tab">
-                    Schlagw&ouml;rter
+            <li class="nav-item" *ngIf="kunde.hasInteressen()">
+                <a class="nav-link" href="#interessen" data-toggle="tab">
+                    Interessen
                 </a>
             </li>
         </ul>
@@ -50,21 +50,21 @@
         <div class="tab-content">
             <div class="tab-pane fade in active" id="stammdaten">
                 <div class="mt-1">
-                    <hs-details-stammdaten [buch]="buch">
+                    <hs-details-stammdaten [kunde]="kunde">
                     </hs-details-stammdaten>
                 </div>
             </div>
-            <div class="tab-pane fade" id="schlagwoerter"
-                *ngIf="buch.hasSchlagwoerter()">
+            <div class="tab-pane fade" id="interessen"
+                *ngIf="kunde.hasInteressen()">
                 <div class="mt-1">
-                    <hs-details-schlagwoerter [values]="buch.schlagwoerter">
-                    </hs-details-schlagwoerter>
+                    <hs-details-interessen [values]="kunde.interessen">
+                    </hs-details-interessen>
                 </div>
             </div>
         </div>
 
         <div *ngIf="isAdmin">
-            <a [routerLink]="['/updateBuch', buch._id]" data-toggle="tooltip"
+            <a [routerLink]="['/updateKunde', kunde._id]" data-toggle="tooltip"
                 title="Bearbeiten" class="ml-1">
                 <i class="fa fa-2x fa-edit"></i>
             </a>
