--- a/src/kunde/details-kunde/details-stammdaten.component.html
+++ b/src/kunde/details-kunde/details-stammdaten.component.html
@@ -15,71 +15,72 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <table class="table table-striped table-hover table-responsive"
-        *ngIf="buch !== null">
+        *ngIf="kunde !== null">
     <tbody>
         <tr>
-            <td><label>Titel</label></td>
-            <td>{{buch.titel}}</td>
-        </tr>
-        <tr>
-            <td><label>Bewertung</label></td>
-            <td>
-                <span *ngFor="let r of buch.ratingArray">
-                    <i class="fa fa-star" style="color: yellow;"
-                        *ngIf="r === true"></i>
-                </span>
-            </td>
-        </tr>
-        <tr>
-            <td><label>Art</label></td>
-            <td>
-                <span [ngSwitch]="buch.art">
-                    <span *ngSwitchCase="'DRUCKAUSGABE'">Druckausgabe</span>
-                    <span *ngSwitchCase="'KINDLE'">Kindle</span>
-                    <span *ngSwitchDefault>unbekannt</span>
-                </span>
-            </td>
-        </tr>
-        <tr>
-            <td><label>Verlag</label></td>
-            <td>
-                <span [ngSwitch]="buch.verlag">
-                    <span *ngSwitchCase="'IWI_VERLAG'">Iwi Verlag</span>
-                    <span *ngSwitchCase="'HSKA_VERLAG'">Hska Verlag</span>
-                    <span *ngSwitchDefault>unbekannt</span>
-                </span>
-            </td>
-        </tr>
-        <tr>
-            <td><label>Datum</label></td>
-            <td>
-                {{buch.datumFormatted}}<br/>
-                {{buch.datumFromNow}}
-            </td>
-        </tr>
-        <tr>
-            <td><label>Preis</label></td>
-            <!-- TODO 2 Nachkommastellen. Pipe "| number: '.2'" -->
-            <td>{{buch.preis | currency: 'EUR': true}}</td>
-        </tr>
-        <tr>
-            <td><label>Rabatt</label></td>
-            <!-- {minIntegerDigits}.{minFractionDigits}-{maxFractionDigits} -->
-            <!-- default: 1.0-3 -->
-            <!-- siehe number_pipe.ts -->
-            <td>{{buch.rabatt | percent: '.2'}}</td>
+            <td><label>Nachname</label></td>
+            <td>{{kunde.nachname}}</td>
         </tr>
         <tr>
             <td><label>Email</label></td>
-            <td>{{buch.email}}</td>
+            <td>{{kunde.email}}</td>
         </tr>
         <tr>
-            <td><label>Lieferbar?</label></td>
+            <td><label>Newsletter?</label></td>
             <td>
                 <div class="checkbox">
-                    <input type="checkbox" checked="{{buch.lieferbar}}" disabled
+                    <input type="checkbox" checked="{{kunde.newsletter}}" disabled
                         class="checkbox">
                 </div>
+            </td>
+        </tr>
+        <tr>
+            <td><label>Geburtsdatum</label></td>
+            <td>
+                {{kunde.geburtsdatumFormatted}}<br/>
+                {{kunde.geburtsdatumFromNow}}
+            </td>
+        </tr>
+        <tr>
+            <td><label>Umsatz</label></td>
+            <!-- TODO 2 Nachkommastellen. Pipe "| number: '.2'" -->
+            <td>{{kunde.umsatz.betrag | currency: 'EUR': true}}</td>
+        </tr>
+        <tr>
+            <td><label>Waehrung</label></td>
+            <td>{{kunde.waehrung}}</td>
+        </tr>
+        <tr>
+            <td><label>Homepage</label></td>
+            <td>{{kunde.homepage}}</td>
+        </tr>
+        <tr>
+            <td><label>Geschlecht</label></td>
+            <td>
+                <span [ngSwitch]="kunde.geschlecht">
+                    <span *ngSwitchCase="'M'">Maennlich</span>
+                    <span *ngSwitchCase="'W'">Weiblich</span>
+                    <span *ngSwitchDefault>unbekannt</span>
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td><label>Familienstand</label></td>
+            <td>
+                <span [ngSwitch]="kunde.familienstand">
+                    <span *ngSwitchCase="'L'">Ledig</span>
+                    <span *ngSwitchCase="'VH'">Verheiratet</span>
+                    <span *ngSwitchCase="'G'">Geschieden</span>
+                    <span *ngSwitchCase="'VW'">Verwittwet</span>
+                    <span *ngSwitchDefault>unbekannt</span>
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td><label>Adresse</label></td>
+            <td>
+                {{kunde.adresse.plz}}<br/>
+                {{kunde.adresse.ort}}
             </td>
         </tr>
     </tbody>
