--- a/src/kunde/suche-kunden/suchergebnis.component.html
+++ b/src/kunde/suche-kunden/suchergebnis.component.html
@@ -23,10 +23,10 @@
 </div>
 
 <ng-template #suchergebnis>
-    <div class="card mt-2" *ngIf="buecher.length !== 0; else fehlermeldung">
+    <div class="card mt-2" *ngIf="kunden.length !== 0; else fehlermeldung">
         <div class="card-header">
             <i class="fa fa-folder-open-o"></i>
-            <span class="ml-1 font-weight-bold">Gefundene B&uuml;cher</span>
+            <span class="ml-1 font-weight-bold">Gefundene Kunden</span>
         </div>
         <div class="card-block">
             <table class="table table-striped table-hover table-responsive"
@@ -34,57 +34,67 @@
                 <thead class="thead-default">
                     <th>Nr.</th>
                     <th>ID</th>
-                    <th>Titel</th>
-                    <th>Verlag</th>
-                    <th>Schlagw&ouml;rter</th>
+                    <th>Nachname</th>
+                    <th>Email</th>
+                    <th>Interessen</th>
                     <th>
-                        <span class="sr-only">Spalte f&uuml;r Details</span>
+                        <span class="int-only">Spalte f&uuml;r Details</span>
                     </th>
                     <th *ngIf="isAdmin">
-                        <span class="sr-only">Spalte f&uuml;r Entfernen</span>
+                        <span class="int-only">Spalte f&uuml;r Entfernen</span>
                     </th>
                 </thead>
                 <tbody>
                     <!-- Template Binding: ngFor -->
                     <!-- Event-Binding: statt (click) auch on-click -->
                     <!-- Animation flyInOut siehe unten -->
-                    <tr *ngFor="let b of buecher; let i = index"
-                        (click)="onSelect(b)" [@rowOut]="'in'">
+                    <tr *ngFor="let k of kunden; let i = index"
+                        (click)="onSelect(k)" [@rowOut]="'in'">
                         <td>{{i + 1}}</td>
-                        <td>{{b._id}}</td>
-                        <td>{{b.titel}}</td>
+                        <td>{{k._id}}</td>
+                        <td>{{k.nachname}}</td>
                         <td>
-                            <span [ngSwitch]="b.verlag">
-                                <span *ngSwitchCase="'IWI_VERLAG'">Iwi Verlag</span>
-                                <span *ngSwitchCase="'HSKA_VERLAG'">
-                                    Hska Verlag
-                                </span>
+                            <span [ngSwitch]="k.geschlecht">
+                                <span *ngSwitchCase="'M'">Maennlich</span>
+                                <span *ngSwitchCase="'W'">Weiblich</span>
                                 <span *ngSwitchDefault>unbekannt</span>
                             </span>
                         </td>
                         <td>
-                            <span *ngFor="let sw of b.schlagwoerter">
-                                <span [ngSwitch]="sw">
-                                    <span *ngSwitchCase="'JAVASCRIPT'">
-                                        JavaScript<br>
+                            <span [ngSwitch]="k.familienstand">
+                                <span *ngSwitchCase="'L'">Ledig</span>
+                                <span *ngSwitchCase="'VH'">Verheiratet</span>
+                                <span *ngSwitchCase="'G'">Geschieden</span>
+                                <span *ngSwitchCase="'VW'">Verwittwet</span>
+                                <span *ngSwitchDefault>unbekannt</span>
+                            </span>
+                        </td>
+                        <td>
+                            <span *ngFor="let int of k.interessen">
+                                <span [ngSwitch]="int">
+                                    <span *ngSwitchCase="'L'">
+                                        Lesen<br>
                                     </span>
-                                    <span *ngSwitchCase="'TYPESCRIPT'">
-                                        TypeScript
+                                    <span *ngSwitchCase="'S'">
+                                        Sport
+                                    </span>
+                                    <span *ngSwitchCase="'R'">
+                                        Reisen
                                     </span>
                                 </span>
                             </span>
                         </td>
                         <td>
-                            <!-- Pfad detailsBuch/:id, in root.router.ts -->
+                            <!-- Pfad detailsKunde/:id, in root.router.ts -->
                             <!-- modaler Dialog als Alternative: -->
                             <!-- http://v4-alpha.getbootstrap.com/components/modal -->
-                            <a [routerLink]="['/detailsBuch', b._id]"
+                            <a [routerLink]="['/detailsKunde', k._id]"
                                 data-toggle="tooltip" title="Details anzeigen">
                                 <i class="fa fa-search-plus"></i>
                             </a>
                         </td>
                         <td *ngIf="isAdmin">
-                            <a (click)="onRemove(b)" data-toggle="tooltip"
+                            <a (click)="onRemove(k)" data-toggle="tooltip"
                                 title="Entfernen">
                                 <i class="fa fa-remove"></i>
                             </a>
@@ -94,22 +104,22 @@
             </table>
         </div>
         <div class="card-footer">
-            <div [ngPlural]="buecher.length">
+            <div [ngPlural]="kunden.length">
                 <!-- zu vergleichender Ausdruck -->
                 <ng-template ngPluralCase="=0">
-                    <i class="fa fa-info-circle"></i> Es gibt kein Buch
+                    <i class="fa fa-info-circle"></i> Es gibt keinen Kunde
                 </ng-template>
                 <ng-template ngPluralCase="=1">
-                    <i class="fa fa-info-circle"></i> Es gibt ein Buch
+                    <i class="fa fa-info-circle"></i> Es gibt einen Kunde
                 </ng-template>
                 <ng-template ngPluralCase="other">
                     <i class="fa fa-info-circle"></i>
-                    Es gibt {{buecher.length}} B&uuml;cher
+                    Es gibt {{kunden.length}} Kunden
                 </ng-template>
             </div>
 
             <i class="fa fa-info-circle"></i>
-            Zur Anzeige der JSON-Datens&auml;tze in gefundene-buecher.component.html
+            Zur Anzeige der JSON-Datens&auml;tze in gefundene-kunden.component.html
             am Dateiende den Kommentar beim Tag &lt;pre&gt; entfernen
         </div>
     </div>
@@ -120,6 +130,6 @@
 
     <!-- Ausgabe des JSON-Datensatzes im Webbrowser statt console.log(...) -->
     <!--
-    <pre>{{buecher | json}}</pre>
+    <pre>{{kunden | json}}</pre>
     -->
 </ng-template>
