--- a/src/kunde/create-kunde/create-kunde.component.html
+++ b/src/kunde/create-kunde/create-kunde.component.html
@@ -62,15 +62,27 @@
                 </div>
             </div>
 
-            <div class="form-group row"
+            <div class="form-group row">
                 <label for="homepageInput" class="col col-2 form-control-label">
-                    Homepage *
+                    Homepage
                 </label>
                 <div class="col col-10">
                     <input id="homepageInput"
                         placeholder="Homepage"
                         class="form-control"
                         formControlName="homepage">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="geburtsdatumInput" class="col col-2 form-control-label">
+                    Geburtsdatum
+                </label>
+                <div class="col col-10">
+                    <input id="geburtsdatumInput"
+                        class="form-control"
+                        type="date"
+                        formControlName="geburtsdatum"/>
                 </div>
             </div>
 
