--- a/src/kunde/update-kunde/update-stammdaten.component.html
+++ b/src/kunde/update-kunde/update-stammdaten.component.html
@@ -15,47 +15,29 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <form [formGroup]="form" role="form">
-    <div class="form-group row" [class.has-danger]="!titel.valid && titel.touched">
-        <label for="titelInput" class="col col-2 form-control-label">
-            Titel *
+    <div class="form-group row" [class.has-danger]="!nachname.valid && nachname.touched">
+        <label for="nachnameInput" class="col col-2 form-control-label">
+            Nachname *
         </label>
         <div class="col col-10">
-            <input id="titelInput" placeholder="Titel" class="form-control"
-                autofocus type="text" formControlName="titel">
+            <input id="nachnameInput" placeholder="Nachname" class="form-control"
+                autofocus type="text" formControlName="nachname">
             <div class="fa fa-exclamation-circle form-control-feedback"
-                *ngIf="!titel.valid && titel.touched">
-                Ein Buchtitel muss mit einem Buchstaben oder einer Ziffer beginnen.
+                *ngIf="!nachname.valid && nachname.touched">
+                Ein Nachname muss mit einem Buchstaben beginnen.
             </div>
         </div>
     </div>
 
     <div class="form-group row">
-        <label class="col col-2 form-control-label">Art *</label>
+        <label class="col col-2 form-control-label">Familienstand *</label>
         <div class="col col-10">
-            <select class="form-control" formControlName="art">
-                <option value="DRUCKAUSGABE">Druckausgabe</option>
-                <option value="KINDLE">Kindle</option>
+            <select class="form-control" formControlName="familienstand">
+                <option value="L">Ledig</option>
+                <option value="VH">Verheiratet</option>
+                <option value="G">Geschieden</option>
+                <option value="VW">Verwittwet</option>
             </select>
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <label class="col col-2 form-control-label">Verlag</label>
-        <div class="col col-10">
-            <select class="form-control" formControlName="verlag">
-                <option value="IWI_VERLAG">Iwi Verlag</option>
-                <option value="HSKA_VERLAG">Hska Verlag</option>
-            </select>
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <label for="ratingInput" class="col col-2 form-control-label">
-            Bewertung
-        </label>
-        <div class="col col-10">
-            <input id="ratingInput" type="range" min="0" max="5"
-                formControlName="rating">
         </div>
     </div>
 
